Updated add contacts icons in FAB.
MAILAND-1403

--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -116,7 +116,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:id="@+id/fab_contacts_add_contact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/fab_ic_contact_add_user"
+            android:src="@drawable/ic_contact_add"
             app:fab_colorNormal="@color/interaction_strong"
             app:fab_colorPressed="@color/dark_purple_statusbar"
             app:fab_label="@string/fab_add_contact"
@@ -128,7 +128,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:id="@+id/fab_contacts_add_contact_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/fab_ic_contact_add_group"
+            android:src="@drawable/ic_contacts_group_add"
             app:fab_colorNormal="@color/interaction_strong"
             app:fab_colorPressed="@color/dark_purple_statusbar"
             app:fab_label="@string/fab_add_contact_group"
