Create ComposerAttachmentUiModel.kt and ComposerAttachmentUiModelMapper.kt
MAILAND-1669

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -20,6 +20,7 @@
 <resources>
 
     <item name="multi_line_label_recycler_view" type="id"/>
+    <item name="side_drawer_recycler_view" type="id"/>
 
     <item name="monday" type="id"/>
     <item name="tuesday" type="id"/>
