Implement ComposerAttachmentsView.kt
MAILAND-1669

--- a/app/src/main/res/drawable/shape_rectangle_xsmall_corners_weak_outline.xml
+++ b/app/src/main/res/drawable/shape_rectangle_xsmall_corners_weak_outline.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -17,17 +16,11 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
-<resources>
 
-    <item name="composer_attachments_recycler_view" type="id"/>
-    <item name="multi_line_label_recycler_view" type="id"/>
-    <item name="side_drawer_recycler_view" type="id"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke
+        android:width="@dimen/size_outline"
+        android:color="@color/interaction_weak"/>
 
-    <item name="monday" type="id"/>
-    <item name="tuesday" type="id"/>
-    <item name="wednesday" type="id"/>
-    <item name="thursday" type="id"/>
-    <item name="friday" type="id"/>
-    <item name="saturday" type="id"/>
-    <item name="sunday" type="id"/>
-</resources>
+    <corners android:radius="@dimen/size_corner_xs" />
+</shape>
