--- a/app/src/main/res/layout/layout_contact_details_main_buttons.xml
+++ b/app/src/main/res/layout/layout_contact_details_main_buttons.xml
@@ -19,45 +19,45 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/layout_details_actions"
+    android:id="@+id/layout_contact_details_actions"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/padding_m">
 
     <TextView
-        android:id="@+id/text_view_details_actions_reply"
+        android:id="@+id/text_view_contact_details_compose"
         style="@style/ActionButtons"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/reply"
-        app:drawableTopCompat="@drawable/ic_reply"
+        app:drawableTopCompat="@drawable/ic_envelope_dot"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/text_view_details_actions_reply_all"
+        app:layout_constraintEnd_toStartOf="@+id/text_view_contact_details_call"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/text_view_details_actions_reply_all"
+        android:id="@+id/text_view_contact_details_call"
         style="@style/ActionButtons"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/reply_all"
-        app:drawableTopCompat="@drawable/ic_reply_all"
+        app:drawableTopCompat="@drawable/ic_contact_phone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/text_view_details_actions_forward"
-        app:layout_constraintStart_toEndOf="@+id/text_view_details_actions_reply"
+        app:layout_constraintEnd_toStartOf="@+id/text_view_contact_details_share"
+        app:layout_constraintStart_toEndOf="@+id/text_view_contact_details_compose"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/text_view_details_actions_forward"
+        android:id="@+id/text_view_contact_details_share"
         style="@style/ActionButtons"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/forward"
-        app:drawableTopCompat="@drawable/ic_forward"
+        android:text="@string/share"
+        app:drawableTopCompat="@drawable/share_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/text_view_details_actions_reply_all"
+        app:layout_constraintStart_toEndOf="@+id/text_view_contact_details_call"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
