--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -120,6 +120,20 @@
         <item name="android:textAppearance">@style/Proton.Text.DefaultSmall</item>
     </style>
 
+    <style name="ActionButtons">
+        <item name="android:layout_margin">@dimen/padding_m</item>
+        <item name="android:clickable">true</item>
+        <item name="android:background">@drawable/shape_background_action_sheet_buttons</item>
+        <item name="android:drawablePadding">@dimen/padding_l</item>
+        <item name="android:elevation">@dimen/elevation_s</item>
+        <item name="android:focusable">true</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">@dimen/padding_l</item>
+        <item name="android:textColor">@color/cornflower_blue</item>
+        <item name="android:textAppearance">@style/Proton.Text.Default</item>
+        <item name="drawableTint">@color/cornflower_blue</item>
+    </style>
+
     <style
         name="ProtonMail.BottomSheetDialogTheme"
         parent="@style/ThemeOverlay.MaterialComponents.BottomSheetDialog">
