Updated new contact details layout, added new icons etc.
MAILAND-1875

--- a/app/src/main/res/layout/fragment_labels_action_sheet.xml
+++ b/app/src/main/res/layout/fragment_labels_action_sheet.xml
@@ -79,7 +79,7 @@
 
             <TextView
                 android:id="@+id/text_view_labels_sheet_new_label"
-                style="@style/ActionSheetStandardItem"
+                style="@style/ListStandardItem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?selectableItemBackground"
@@ -91,7 +91,7 @@
 
             <TextView
                 android:id="@+id/text_view_labels_sheet_new_folder"
-                style="@style/ActionSheetStandardItem"
+                style="@style/ListStandardItem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?selectableItemBackground"
