--- a/app/src/main/res/layout/layout_contact_details_main_buttons.xml
+++ b/app/src/main/res/layout/layout_contact_details_main_buttons.xml
@@ -29,8 +29,8 @@
         style="@style/ActionButtons"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/reply"
-        app:drawableTopCompat="@drawable/ic_envelope_dot"
+        android:text="@string/compose"
+        app:drawableTopCompat="@drawable/ic_envelope_full"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/text_view_contact_details_call"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
         style="@style/ActionButtons"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/reply_all"
+        android:text="@string/contacts_call"
         app:drawableTopCompat="@drawable/ic_contact_phone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/text_view_contact_details_share"
@@ -54,7 +54,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/share"
-        app:drawableTopCompat="@drawable/share_icon"
+        app:drawableTopCompat="@drawable/ic_link_filled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/text_view_contact_details_call"
