--- a/app/src/main/res/layout/activity_contact_details.xml
+++ b/app/src/main/res/layout/activity_contact_details.xml
@@ -80,6 +80,12 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                 android:id="@+id/include_contact_details_buttons"
                 layout="@layout/layout_contact_details_main_buttons" />
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_contacts_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/list_item_contact_detail"/>
+
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
