Display attachments for each message in a conversation
By pulling the creation of the "attachments adapter" and the displaying
logic into the adapter (so that it gets executed for each item).
Twp pieces of functionality to "set is pgp encrypted" and hide the
"download attachments" spinner were dropped, as migrating them implied a
relevant effort and the existing plan to change attachment presentation
will invalidate such features anyways.

- Manually changed AttachmentsView to MessageDetailsAttachmentView in
  layout_message_details_web_view while rebasing over
  609fdbb596a37c2381d03ec3fbf08b5b3d53aed0 changes

MAILAND-1770

--- a/app/src/main/res/layout/layout_message_details_web_view.xml
+++ b/app/src/main/res/layout/layout_message_details_web_view.xml
@@ -17,15 +17,114 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/messageWebViewContainer"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:focusableInTouchMode="true"
     android:descendantFocusability="blocksDescendants"
-    android:animateLayoutChanges="true"
-    android:orientation="vertical">
+    android:animateLayoutChanges="true">
+
+    <View
+        android:id="@+id/headerDividerView"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/size_divider"
+        android:background="@drawable/list_divider"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ch.protonmail.android.views.messageDetails.MessageDetailsAttachmentsView
+        android:id="@+id/attachmentsView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/headerDividerView"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
+    <View
+        android:id="@+id/attachmentsDividerView"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/size_divider"
+        android:background="@drawable/list_divider"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/attachmentsView"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
+    <ch.protonmail.android.views.messageDetails.MessageDetailsExpirationInfoView
+        android:id="@+id/expirationInfoView"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/message_details_banner_height"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/attachmentsView" />
+
+    <!-- TODO: To be replaced in another ticket for banners -->
+    <ch.protonmail.android.views.messageDetails.LoadContentButton
+        android:id="@+id/containerDisplayImages"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/message_spacing"
+        android:layout_marginTop="@dimen/message_spacing_small"
+        android:layout_marginRight="@dimen/message_spacing"
+        android:layout_marginBottom="@dimen/message_spacing_small"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/expirationInfoView"
+        android:visibility="gone"
+        app:text="@string/display_images"
+        tools:visibility="visible" />
+
+    <!-- TODO: To be replaced in another ticket for banners -->
+    <ch.protonmail.android.views.messageDetails.LoadContentButton
+        android:id="@+id/containerLoadEmbeddedImagesContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/message_spacing"
+        android:layout_marginTop="@dimen/message_spacing_small"
+        android:layout_marginRight="@dimen/message_spacing"
+        android:layout_marginBottom="@dimen/message_spacing_small"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/containerDisplayImages"
+        android:visibility="gone"
+        app:text="@string/load_embedded_images"
+        tools:visibility="visible" />
+
+    <!-- TODO: To be replaced in another ticket for banners -->
+    <TextView
+        android:id="@+id/spamScoreView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fields_default_space_small"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/containerLoadEmbeddedImagesContainer"
+        android:background="@color/warning"
+        android:padding="@dimen/fields_default_space"
+        android:textColor="@color/white"
+        android:visibility="visible"
+        tools:text="@string/spam_score_101" />
+
+    <!-- TODO: The web view should be moved here, but that requires changes in the adapter
+          that will probably be made with MAILAND-1535 -->
 
     <!-- add webview through code use application context to avoid memory leaks -->
     <!-- https://code.google.com/p/android/issues/detail?id=9375 -->
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/messageWebViewContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusableInTouchMode="true"
+        android:descendantFocusability="blocksDescendants"
+        android:animateLayoutChanges="true"
+        app:layout_constraintTop_toBottomOf="@id/spamScoreView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
