--- a/app/src/main/res/layout/activity_compose_message.xml
+++ b/app/src/main/res/layout/activity_compose_message.xml
@@ -441,11 +441,11 @@
         android:background="@drawable/actionbar_shadow" />
 
     <View
-        android:orientation="vertical"
         android:id="@+id/screenProtectorView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
         android:clickable="true"
-        android:focusable="true" />
+        android:focusable="true"
+        android:orientation="vertical" />
 </RelativeLayout>
